added timetable visualization

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                     <label for="startTimeInput">Час на стартиране</label>
                     <input type="text" id="startTimeInput" aria-describedby="startTimeHelp" required>
                 </div>
-                <div id="startTimeHelp" class="help">Напишете час на стартиране във формат HH:mm. Пример: 14:00</div>
+                <div id="startTimeHelp" class="help">Напишете час на стартиране във формат HH:mm. Часът може да бъде само кръгъл час. Пример: 8:00.</div>
             </div>
             <div class="input">
                 <div class="direction-row">
                     <label for="endTimeInput">Час на приключване</label>
                     <input type="text" id="endTimeInput" aria-describedby="endTimeHelp" required>
                 </div>
-                <div id="endTimeHelp" class="help">Напишете час на приключване във формат HH:mm. Пример: 14:00</div>
+                <div id="endTimeHelp" class="help">Напишете час на приключване във формат HH:mm. Часът може да бъде само кръгъл час. Пример: 15:00</div>
             </div>
             <div class="input">
                 <div class="direction-row">
