--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         </article>
     </section>
 
+    <div class="row">
+        <button class="button export-button">Експорт към JSON</button>
+        <button class="button import-button">Импорт от JSON</button>
+    </div>
+
     <section class="flex-box centered">
         <form id="course-form" class="form-style">
             <div class="input">
