Craete_import_export

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
         </ul>
     </nav>
 
-    <section id="courses">
-        <article id="courses-body">
-        </article>
+    <section id="courses-body">
     </section>
 
     <div class="row">
-        <button class="button export-button">Експорт към JSON</button>
-        <button class="button import-button">Импорт от JSON</button>
+        <button id="export-timetable" class="button export-button">Експорт към JSON</button>
+        <input id="file-input" type="file" name="name" class="button import-button" placeholder="Импорт от JSON"></input>
     </div>
 
     <section class="flex-box centered">
