--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
     <section id="courses-body">
     </section>
 
-    <div class="row">
+    <section class="row">
         <button id="export-timetable" class="button export-button">Експорт към JSON</button>
         <input id="file-input" type="file" name="name" class="button import-button" placeholder="Импорт от JSON"></input>
-    </div>
+    </section>
 
     <section class="flex-box centered">
         <form id="course-form" class="form-style">
-            <div class="input">
-                <div class="direction-row">
+            <section class="input">
+                <section class="direction-row">
                     <label for="titleInput">Име</label>
                     <input type="text" id="titleInput" required>
-                </div>
-            </div>
-            <div class="input">
-                <div class="direction-row">
+                </section>
+            </section>
+            <section class="input">
+                <section class="direction-row">
                     <label for="descriptionInput">Описание</label>
                     <textarea id="descriptionInput" rows="3" class="field-textarea" required></textarea>
-                </div>
-            </div class="input">
-            <div class="form-item input">
-                <div class="direction-row">
+                </section>
+            </section class="input">
+            <section class="form-item input">
+                <section class="direction-row">
                     <label for="day">Ден на провеждане</label>
                     <select id="day" name="dayId" class="field-select">
                         <option value="Понеделник">Понеделник</option>
@@ -57,29 +57,29 @@
                         <option value="Четвъртък">Четвъртък</option>
                         <option value="Петък">Петък</option>
                     </select>
-                </div>
-            </div>
-            <div class="input">
-                <div class="direction-row">
+                </section>
+            </section>
+            <section class="input">
+                <section class="direction-row">
                     <label for="startTimeInput">Час на стартиране</label>
                     <input type="text" id="startTimeInput" aria-describedby="startTimeHelp" required>
-                </div>
-                <div id="startTimeHelp" class="help">Напишете час на стартиране във формат HH:mm. Часът може да бъде само кръгъл час. Пример: 8:00.</div>
-            </div>
-            <div class="input">
-                <div class="direction-row">
+                </section>
+                <section id="startTimeHelp" class="help">Напишете час на стартиране във формат HH:mm. Часът може да бъде само кръгъл час. Пример: 8:00.</section>
+            </section>
+            <section class="input">
+                <section class="direction-row">
                     <label for="endTimeInput">Час на приключване</label>
                     <input type="text" id="endTimeInput" aria-describedby="endTimeHelp" required>
-                </div>
-                <div id="endTimeHelp" class="help">Напишете час на приключване във формат HH:mm. Часът може да бъде само кръгъл час. Пример: 15:00</div>
-            </div>
-            <div class="input">
-                <div class="direction-row">
+                </section>
+                <section id="endTimeHelp" class="help">Напишете час на приключване във формат HH:mm. Часът може да бъде само кръгъл час. Пример: 15:00</section>
+            </section>
+            <section class="input">
+                <section class="direction-row">
                     <label for="dependenciesInput">Предпоставки</label>
                     <input type="text" id="dependenciesInput" aria-describedby="dependenciesHelp" required>
-                </div>
-                <div id="dependenciesHelp" class="help">Напиши курсовете, които са предпоставки за този курс във формат: Име на Курс 1;Име на Курс 2;Име на Курс3;... </div>
-            </div>
+                </section>
+                <section id="dependenciesHelp" class="help">Напиши курсовете, които са предпоставки за този курс във формат: Име на Курс 1;Име на Курс 2;Име на Курс3;... </section>
+            </section>
             <button id="submitBtn" type="submit">Добави</button>
         </form>
     </section>
