--- a/display.html
+++ b/display.html
@@ -26,78 +26,78 @@
         </ul>
     </nav>
 
-    <div class="timetable">
-        <div class="week-names">
-            <div>Понеделник</div>
-            <div>Вторник</div>
-            <div>Сряда</div>
-            <div>Четвъртък</div>
-            <div>Петък</div>
-        </div>
-        <div class="time-interval">
-            <div>8:00 - 9:00</div>
-            <div>9:00 - 10:00</div>
-            <div>10:00 - 11:00</div>
-            <div>11:00 - 12:00</div>
-            <div>12:00 - 13:00</div>
-            <div>13:00 - 14:00</div>
-            <div>14:00 - 15:00</div>
-            <div>15:00 - 16:00</div>
-            <div>17:00 - 18:00</div>
-        </div>
-        <div class="content">
-            <div id="8-monday"></div>
-            <div id="8-tuesday"></div>
-            <div id="8-wednesday"></div>
-            <div id="8-thursday"></div>
-            <div id="8-friday"></div>
-            <div id="9-monday"></div>
-            <div id="9-tuesday"></div>
-            <div id="9-wednesday"></div>
-            <div id="9-thursday"></div>
-            <div id="9-friday"></div>
-            <div id="10-monday"></div>
-            <div id="10-tuesday"></div>
-            <div id="10-wednesday"></div>
-            <div id="10-thursday"></div>
-            <div id="10-friday"></div>
-            <div id="11-monday"></div>
-            <div id="11-tuesday"></div>
-            <div id="11-wednesday"></div>
-            <div id="11-thursday"></div>
-            <div id="11-friday"></div>
-            <div id="12-monday"></div>
-            <div id="12-tuesday"></div>
-            <div id="12-wednesday"></div>
-            <div id="12-thursday"></div>
-            <div id="12-friday"></div>
-            <div id="13-monday"></div>
-            <div id="13-tuesday"></div>
-            <div id="13-wednesday"></div>
-            <div id="13-thursday"></div>
-            <div id="13-friday"></div>
-            <div id="14-monday"></div>
-            <div id="14-tuesday"></div>
-            <div id="14-wednesday"></div>
-            <div id="14-thursday"></div>
-            <div id="14-friday"></div>
-            <div id="15-monday"></div>
-            <div id="15-tuesday"></div>
-            <div id="15-wednesday"></div>
-            <div id="15-thursday"></div>
-            <div id="15-friday"></div>
-            <div id="16-monday"></div>
-            <div id="16-tuesday"></div>
-            <div id="16-wednesday"></div>
-            <div id="16-thursday"></div>
-            <div id="16-friday"></div>
-            <div id="17-monday"></div>
-            <div id="17-tuesday"></div>
-            <div id="17-wednesday"></div>
-            <div id="17-thursday"></div>
-            <div id="17-friday"></div>
-        </div>
-    </div>
+    <section class="timetable">
+        <section class="week-names">
+            <section>Понеделник</section>
+            <section>Вторник</section>
+            <section>Сряда</section>
+            <section>Четвъртък</section>
+            <section>Петък</section>
+        </section>
+        <section class="time-interval">
+            <section>8:00 - 9:00</section>
+            <section>9:00 - 10:00</section>
+            <section>10:00 - 11:00</section>
+            <section>11:00 - 12:00</section>
+            <section>12:00 - 13:00</section>
+            <section>13:00 - 14:00</section>
+            <section>14:00 - 15:00</section>
+            <section>15:00 - 16:00</section>
+            <section>17:00 - 18:00</section>
+        </section>
+        <section class="content">
+            <section id="8-monday"></section>
+            <section id="8-tuesday"></section>
+            <section id="8-wednesday"></section>
+            <section id="8-thursday"></section>
+            <section id="8-friday"></section>
+            <section id="9-monday"></section>
+            <section id="9-tuesday"></section>
+            <section id="9-wednesday"></section>
+            <section id="9-thursday"></section>
+            <section id="9-friday"></section>
+            <section id="10-monday"></section>
+            <section id="10-tuesday"></section>
+            <section id="10-wednesday"></section>
+            <section id="10-thursday"></section>
+            <section id="10-friday"></section>
+            <section id="11-monday"></section>
+            <section id="11-tuesday"></section>
+            <section id="11-wednesday"></section>
+            <section id="11-thursday"></section>
+            <section id="11-friday"></section>
+            <section id="12-monday"></section>
+            <section id="12-tuesday"></section>
+            <section id="12-wednesday"></section>
+            <section id="12-thursday"></section>
+            <section id="12-friday"></section>
+            <section id="13-monday"></section>
+            <section id="13-tuesday"></section>
+            <section id="13-wednesday"></section>
+            <section id="13-thursday"></section>
+            <section id="13-friday"></section>
+            <section id="14-monday"></section>
+            <section id="14-tuesday"></section>
+            <section id="14-wednesday"></section>
+            <section id="14-thursday"></section>
+            <section id="14-friday"></section>
+            <section id="15-monday"></section>
+            <section id="15-tuesday"></section>
+            <section id="15-wednesday"></section>
+            <section id="15-thursday"></section>
+            <section id="15-friday"></section>
+            <section id="16-monday"></section>
+            <section id="16-tuesday"></section>
+            <section id="16-wednesday"></section>
+            <section id="16-thursday"></section>
+            <section id="16-friday"></section>
+            <section id="17-monday"></section>
+            <section id="17-tuesday"></section>
+            <section id="17-wednesday"></section>
+            <section id="17-thursday"></section>
+            <section id="17-friday"></section>
+        </section>
+    </section>
 
     <script src="./display-timetable.js"></script>
 
