--- a/dependency.html
+++ b/dependency.html
@@ -25,7 +25,14 @@
         </ul>
     </nav>
 
-    <script src="./index.js"></script>
+    <main>
+        <p id="dependencyExplanation">
+            Дъгите показват зависимостите, като винаги предмета в горния край на дъгата зависи от този в долния му край.
+        </p>
+        <canvas id="drawingCanvas"></canvas>
+    </main>
+
+    <script src="./dependency.js"></script>
 
 </body>
 
