dependancy pattern fix

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <label for="dependenciesInput">Предпоставки</label>
                     </td>
                     <td class="inputBox">
-                        <input type="text" id="dependenciesInput" aria-describedby="dependenciesHelp" pattern="^[А-Яа-я]+$">
+                        <input type="text" id="dependenciesInput" aria-describedby="dependenciesHelp" pattern="^[А-Яа-я 0-9;]+$">
                     </td>
                 </tr>
                 <tr>
