Added login and specialty of user

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <nav class="navbar">
         <ul class="navbar-nav">
             <li class="nav-item">
+                <a class="nav-link" href="./login.html">Вход в системата</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link active" href="./index.html">Курсове</a>
             </li>
             <li class="nav-item">
@@ -32,7 +35,7 @@
         <button id="export-timetable" class="button export-button">Експорт към JSON</button>
         <input id="file-input" type="file" name="name" class="button import-button" placeholder="Импорт от JSON"></input>
     </section>
-    
+
     <section class="row" id="create-course-title" type="button">
         Покажи форма за създаване на курс
     </section>
@@ -110,6 +113,20 @@
                     <td></td>
                     <td>
                         <section id="dependenciesHelp" class="help">Напиши курсовете, които са предпоставки за този курс във формат: Име на Курс 1;Име на Курс 2;Име на Курс3;... </section>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">
+                        <label for="specialtyInput">Специалност</label>
+                    </td>
+                    <td class="inputBox">
+                        <input type="text" id="specialtyInput" aria-describedby="dependenciesHelp" pattern="^[A-Za-z 0-9;]+$">
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <section id="specialtyHelp" class="help">Напиши специалността на курса във формат: SI, KN...</section>
                     </td>
                 </tr>
                 <tr>
