--- a/display.html
+++ b/display.html
@@ -15,6 +15,9 @@
     <nav class="navbar">
         <ul class="navbar-nav">
             <li class="nav-item">
+                <a class="nav-link" href="./login.html">Вход в системата</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="./index.html">Курсове</a>
             </li>
             <li class="nav-item">
