Argo after-teacher updates

--- a/dependency.html
+++ b/dependency.html
@@ -31,6 +31,10 @@
     <main>
         <p id="dependencyExplanation">
             Дъгите показват зависимостите, като винаги предмета в горния край на дъгата зависи от този в долния му край.
+            <br>
+            Плътните дъги показват силна зависимост, а пунктраните слаба.
+        </p>
+        <p id="color-change-btn">
         </p>
         <canvas id="drawingCanvas"></canvas>
     </main>
